2008-02-21  Alexander Larsson  <alexl@redhat.com>

        * gfile.[ch]:
        * gio.symbols:
	Add new g_file_has_prefix that does the same as g_file_contains_file.
	Deprecate g_file_contains_file and add a macro that converts
	it to g_file_has_prefix.
	The reason for this change is that the contains_file() name seems to
	imply that this does more work than what it does, but its really only
	a name match (from #517086)
	
        * gdummyfile.c:
        * glocalfile.c:
        * tests/g-file.c:
	Update to match the above change.

2008-02-20  Benjamin Otte  <otte@gnome.org>

	* gfile.c: (g_file_mount_mountable), (g_file_unmount_mountable),
	(g_file_eject_mountable):
	even more cases of not returning in error path

2008-02-20  Benjamin Otte  <otte@gnome.org>

	* gfile.c: (g_file_mount_mountable): 
	return from function in error path.

2008-02-18  Sylvain Pasche <sylvain.pasche@gmail.com>

        * gfile.h:
	 Remove trailing coma in GMountMountFlags struct

2008-02-18  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        * glocalfileinfo.c:
        * glocalfileoutputstream.c:
	Use g_unlink/g_rename instead of unlink/rename;
	do not pass raw filenames to g_set_error. (#517239)
	Patch from Yevgen Muntyan.

2008-02-18  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
        * glocalfileoutputstream.c:
	Open files with O_BINARY on windows. (#517140)

2008-02-14  Alexander Larsson  <alexl@redhat.com>

        * glocalfileoutputstream.c:
	Correctly check for HAVE_FCHMOD and HAVE_FCHOWN

2008-02-14  Alexander Larsson  <alexl@redhat.com>

        * glocalfile.c:
	Copy permissions with file on copy (#514084)
	This is what cp does and makes sure e.g. the
	exec permissions are kept.
	Its kinda weird in that it keeps the permission bits
	the same while the uid and gid are different. However
	the new uid is the user so its not a security issue,
	and I've heard no complaints about cp on this issue.

2008-02-13  Ryan Lortie  <desrt@desrt.ca>
